--- a/views/jade/home.jade
+++ b/views/jade/home.jade
@@ -3,4 +3,4 @@ extends layout
 block content
 	form(method='post', action='/authenticate')
 		p
-			input(type='submit', value='Connect to Google Analytics')
+			input(type='submit', value='Connect to Google')
