--- a/client/index.ejs
+++ b/client/index.ejs
@@ -1,12 +1,12 @@
-<!DOCTYPE html ng-app='opengash'>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>opengash - Google Analytics alternative dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="public/css/bootstrap.css" media="screen">
-	<script src="public/js/angular.js"></script>
-	<script src="public/js/controllers.js"></script>
+	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
+	<script src="js/og.js"></script>
+	<script src="js/app.js"></script>
+
 	<style>
 		body {
 			padding-top: 70px;
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="navbar navbar-fixed-top"'>
+<div class="navbar navbar-fixed-top">
 	<div class="container">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="/">opengash - An alternative Google Analytics dashboard</a>
@@ -23,7 +23,7 @@
 	</div>
 </div>
 
-<div class="container" ng-view></div>
+<div class="container" og-views></div>
 
 </body>
 </html>
