jQuery as the main library

--- a/client/index.ejs
+++ b/client/index.ejs
@@ -4,6 +4,7 @@
 	<title>opengash - Google Analytics alternative dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
+	<script src='js/lib/jquery-1.10.2.min.js'></script>
 	<script src="js/og.js"></script>
 	<script src="js/app.js"></script>
 
