--- a/client/index.ejs
+++ b/client/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='opengash'>
 <head>
 	<title>opengash - Google Analytics alternative dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
 	<script src='js/lib/jquery-1.10.2.min.js'></script>
-	<script src="js/og.js"></script>
+	<script src='js/lib/angular.min.js'></script>
+	<script src='js/lib/angular-route.min.js'></script>
+	<script src="js/services.js"></script>
+	<script src='js/controllers.js'></script>
 	<script src="js/app.js"></script>
 
 	<style>
@@ -24,7 +27,7 @@
 	</div>
 </div>
 
-<div class="container" og-views></div>
+<div class="container" ng-view></div>
 
 </body>
 </html>
