--- a/client/index.ejs
+++ b/client/index.ejs
@@ -4,12 +4,12 @@
 	<title>opengash - Google Analytics alternative dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
-	<script src='js/lib/jquery-1.10.2.min.js'></script>
-	<script src='js/lib/angular.min.js'></script>
+	<script src='js/lib/angular.js'></script>
 	<script src='js/lib/angular-route.min.js'></script>
+	<script src='js/lib/angular-cookies.js'></script>
+	<script src="js/app.js"></script>
 	<script src="js/services.js"></script>
 	<script src='js/controllers.js'></script>
-	<script src="js/app.js"></script>
 
 	<style>
 		body {
@@ -17,7 +17,7 @@
 		}
 	</style>
 </head>
-<body>
+<body ng-controller='mainCtrl'>
 
 <div class="navbar navbar-fixed-top">
 	<div class="container">
