--- a/client/index.ejs
+++ b/client/index.ejs
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
 	<script src='js/lib/angular.js'></script>
 	<script src='js/lib/angular-route.min.js'></script>
+	<script src='js/lib/angular-ui-router.js'></script>
 	<script src='js/lib/angular-cookies.js'></script>
+	<script src='js/lib/angular-resource.js'></script>
 	<script src="js/app.js"></script>
 	<script src="js/services.js"></script>
 	<script src='js/controllers.js'></script>
@@ -27,7 +29,7 @@
 	</div>
 </div>
 
-<div class="container" ng-view></div>
+<div class="container" ui-view></div>
 
 </body>
 </html>
