--- a/client/index.ejs
+++ b/client/index.ejs
@@ -4,11 +4,10 @@
 	<title>opengash - Google Analytics alternative dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
+	<link rel='stylesheet' href='css/style.css' media='screen'>
 	<script src='js/lib/angular.js'></script>
-	<script src='js/lib/angular-route.min.js'></script>
 	<script src='js/lib/angular-ui-router.js'></script>
 	<script src='js/lib/angular-cookies.js'></script>
-	<script src='js/lib/angular-resource.js'></script>
 	<script src="js/app.js"></script>
 	<script src="js/services.js"></script>
 	<script src='js/controllers.js'></script>
@@ -22,9 +21,9 @@
 <body ng-controller='mainCtrl'>
 
 <div class="navbar navbar-fixed-top">
-	<div class="container">
+	<div>
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">opengash - An alternative Google Analytics dashboard</a>
+			<a class="navbar-brand" href="/">opengash - Google Analytics dashboard</a>
 		</div>
 	</div>
 </div>
