--- a/client/index.ejs
+++ b/client/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='opengash'>
 <head>
-	<title>opengash - Google Analytics alternative dashboard</title>
+	<title>opengash - Google Analytics dashboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
 	<link rel='stylesheet' href='css/style.css' media='screen'>
