--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,10 +1,114 @@
+.og-table td:not(:nth-child(-n+2)) {
+  padding-top: 5px;}
+
+.og-table p.movement {
+    margin: 0;
+  
+}
+.og-table > tbody > tr:nth-child(odd) > td:not(:first-child), 
+.og-table > tbody > tr:nth-child(odd) > th:not(:first-child) {
+  background-color: #f9f9f9;
+}
+
+.og-table tbody tr:last-child td:not(:first-child) {
+  border-bottom: 1px solid #e5e5e5;
+}
+.og-table td .results p {
+  margin: 0;
+}
+
+.og-table td .results:not(nth-child(-n+3)) p + p {
+  margin: 3px;
+}
+
+.og-table td:not(:nth-child(-n+2)) .results p + p {
+  margin: 3px;
+}
+.og-table .comparison {
+  font-size: 0.9em;
+  opacity: 0.6;
+}
+.og-table tbody tr td:nth-child(2) {
+  border-left: 1px solid #e5e5e5;
+}
+.og-table tbody tr td:not(:first-child) {
+  border-right: 1px solid #E5E5E5;
+  position: relative;
+  overflow: hidden;
+}
+
+.og-table thead tr th:not(:first-child) {
+    width: 89px;
+    border-top: 1px solid #e5e5e5;
+    line-height: 25px;
+}
+
+body .og-table tbody tr td:not(:first-child) {
+    width: 89px;
+}
+
+.og-table thead tr th:nth-child(2) {
+    border-left: 1px solid #e5e5e5;
+    border-top-left-radius: 15px;
+}
+
+.og-table thead tr th:last-child {
+    border-right: 1px solid #e5e5e5;
+    border-top-right-radius: 15px;
+}
+  
+.og-table thead tr th:first-child {
+    font-size: 1.3em;
+    font-variant: small-caps;
+    /* text-align: right; */
+    /* margin-right: 10px; */
+    box-shadow: 3px 3px 2px 0px #CCC;
+    position: absolute;
+    right: 430px;
+    border: 1px solid #C0C0C0;
+    padding: 5px;
+    z-index: 3;
+    top: -15px;
+}
+
+.og-table thead tr th {
+    font-weight: normal;
+}
+
+.og-table tbody tr td:first-child {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 130px;
+  overflow: hidden;
+  padding-right: 10px;
+  box-sizing: border-box;
+  height: 60px;
+}
+
+table.og-table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: separate;
+  font-family: Verdana;
+  font-size: 10px;
+  position: relative;
+}
+.dashboard {
+  overflow: hidden;
+  display: inline-block;
+  text-align: center;
+}
 body {
-  padding: 30px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /* padding: 30px; */
 }
 
 .container {
-  max-width: 100%;
+  max-width: 1220px;
+  min-width: 595px;
+  overflow: hidden;
+  margin: 50px auto 0;
+  text-align: center;
+  padding: 0;
 }
 
 a {
@@ -12,39 +116,45 @@ a {
 }
 
 .aTable {
+  width: 570px;
+  margin: 30px 15px;
+  display: inline-block;
+  text-align: left;
   float: left;
-  margin: 10px;
 }
 
 .aTable table td:first-child {
-  font-weight: bold;
   text-align: right;
-  padding-right: 20px;
 }
 
-.results {
-  float: left;
+.og-table td:not(:nth-child(-n+2)) .results {
+    z-index: 2;
+    position: relative;
 }
 
-.comparison {
-  font-size: 13px;
-}
-
-.movement {
-  float: left;
-  line-height: 3em;
-  padding-left: 10px;
-  font-size: 13px;
-}
-
-.aTable table tr {
-  height: 25px;
-}
-
-.aTable table td {
-  min-width: 60px;
+.og-table tbody tr td:not(:nth-child(-n+2)) .movement {
+  /* background-color: rgb(252, 215, 244); */
+  /* position: absolute; */
+  /* bottom: 18px; */
+  /* right: -2px; */
+  /* -webkit-transform: rotate(90deg); */
+  transform: rotate(-90deg);
+  /* padding: 2px; */
   text-align: center;
-  vertical-align: middle !important;
+  opacity: 0.7;
+  margin: 1px 18px;
+  font-size: 0.9em;
+}
+
+.og-table tr td {
+  height: 31px;
+}
+
+.og-table td {
+    padding: 0;
+    
+    text-align: center;
+    vertical-align: middle;
 }
 
 .aTable table th {
