--- a/client/css/style.css
+++ b/client/css/style.css
@@ -17,10 +17,6 @@
   margin: 0;
 }
 
-.og-table td .results:not(nth-child(-n+3)) p + p {
-  margin: 3px;
-}
-
 .og-table td:not(:nth-child(-n+2)) .results p + p {
   margin: 3px;
 }
@@ -138,7 +134,7 @@ a {
   /* bottom: 18px; */
   /* right: -2px; */
   /* -webkit-transform: rotate(90deg); */
-  transform: rotate(-90deg);
+  /* transform: rotate(-90deg); */
   /* padding: 2px; */
   text-align: center;
   opacity: 0.7;
