Refactoring, metricsData service, movement directive, metricsFilter, time periods bug fix
The monstrous `dashboardCtrl` has been defeated. It's now a tiny bunny.

A new `metricsData` service has been implemented to facilitate dealing with Google Analytics metrics.

The mechanism for calculating figure movements has been moved to an AngularJS directive. The directive has the following features:

* It watches for changes in the cell and once both figures are available, it immediately calculates the movement percentage, rather than waiting for the completion of the entire process, like before.
* In coordination with `metricsData`, it knows whether an increase or a decrease is good or bad for the metric being calculated and it reacts accordingly.

A new AngularJS filter has been implemented to deal with Google Analytics data, which is returned in raw format. In coordination with `metricsData`, this filter displays percentages with a percent sign, displays seconds in `hh:mm:ss` format, and displays quantities with commas (i.e. 2484 vs 2,484).

The specified time periods and their comparison periods were wrong. Now fixed.

--- a/client/index.ejs
+++ b/client/index.ejs
@@ -12,16 +12,18 @@
   <script src='js/lib/angular.js'></script>
   <script src='js/lib/angular-ui-router.js'></script>
   <script src='js/lib/angular-cookies.js'></script>
-  <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src='js/controllers.js'></script>
+  <script src='js/directives.js'></script>
+  <script src='js/metrics.js'></script>
+  <script src="js/app.js"></script>
 </head>
 <body ng-controller='mainCtrl'>
 
 <div class="navbar navbar-fixed-top">
   <div>
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">opengash - Google Analytics dashboard</a>
+      <a class="navbar-brand" href="/">opengash - Google Analytics from 10,000 feet</a>
     </div>
   </div>
 </div>
