--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,3 +1,5 @@
+/* todo: specify a deeper font-stack for cells */
+
 .og-table td:not(:nth-child(-n+2)) {
   padding-top: 5px;}
 
@@ -7,7 +9,7 @@
 }
 .og-table > tbody > tr:nth-child(odd) > td:not(:first-child), 
 .og-table > tbody > tr:nth-child(odd) > th:not(:first-child) {
-  background-color: #f9f9f9;
+  background-color: #EEEEF0;
 }
 
 .og-table tbody tr:last-child td:not(:first-child) {
@@ -41,6 +43,7 @@
 
 body .og-table tbody tr td:not(:first-child) {
     width: 89px;
+    max-width: 89px;
 }
 
 .og-table thead tr th:nth-child(2) {
