--- a/source/client/index.ejs
+++ b/source/client/index.ejs
@@ -24,6 +24,15 @@
 <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js'></script>
 <script src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.0/angular-ui-router.min.js'></script>
 <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular-cookies.min.js'></script>
+
+<% if (env == 'production') { %>
 <script src="js/opengash.min.js"></script>
+<% } else { %>
+<script src="js/services.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/directives.js"></script>
+<script src="js/metrics.js"></script>
+<script src="js/app.js"></script>
+<% } %>
 </body>
 </html>
