--- a/source/client/css/style.css
+++ b/source/client/css/style.css
@@ -1,4 +1,16 @@
-/* todo: specify a deeper font-stack for cells */
+/* todo: specify a deeper font-stack for cell */
+.og-table tbody tr td a:hover {
+    border: 1px solid rgb(194, 193, 193);
+}
+
+.og-table tbody tr td a {
+  display : block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+}
 
 .og-table td:not(:nth-child(-n+2)) {
   padding-top: 5px;}
