--- a/source/client/index.ejs
+++ b/source/client/index.ejs
@@ -8,33 +8,56 @@
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" media="screen">
   <link rel='stylesheet' href='style.css' media='screen'>
+  <link rel="icon"
+        type="image/x-icon"
+        href="images/favicon.ico">
 </head>
-<body ng-controller="mainCtrl">
+<body ng-controller="MainCtrl">
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="navbar-header">
     <a class="navbar-brand" href="/" title="belong to you!">opengash: all your Google Analytics</a>
   </div>
   <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav navbar-right"><li ui-view="navLink"></li></ul>
+    <ul class="nav navbar-nav navbar-right" ui-view="navLink"></ul>
+  </div>
+
+  <div class="alert-container ng-cloak" ng-if="alert.show">
+    <div class="alert alert-{{alert.type}} alert-dismissable drop-shadow alert-content">
+      <button ng-click="alert.show = false" class="close">&times;</button>
+      {{alert.message}}
+    </div>
+  </div>
+
+  <div class="alert-container ng-cloak alert-loading" ng-if="loading">
+    <div class="alert alert-info drop-shadow alert-content">
+      <div class="progress progress-striped active">
+        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+             aria-valuemax="100" style="width: 100%"> Loading...
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 <div ui-view="main"></div>
+<span ui-view></span><!-- instantiate AppCtrl -->
 
-<script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js'></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js'></script>
 <script src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.0/angular-ui-router.min.js'></script>
-<script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular-cookies.min.js'></script>
+<script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-cookies.min.js'></script>
+<script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
 
 <% if (env == 'production') { %>
 <script src="opengash.min.js"></script>
 <% } else { %>
+<script src="common/authUrl.js"></script>
 <script src="common/periods.js"></script>
 <script src="common/metricsData.js"></script>
 <script src="common/googleAnalytics.js"></script>
 <script src="common/userAccount.js"></script>
 <script src="common/commonServices.js"></script>
-<script src="welcome/welcome.js"></script>
 <script src="userProfile/userProfile.js"></script>
 <script src="dashboard/dashboard.js"></script>
 <script src="app.js"></script>
